# Viper

./: .gitignore  CMakeLists.txt  README.md
etc/: viper.yaml
script/: build.sh
src/core/: CMakeLists.txt
src/core/app/: config_file.cpp  config_file.h  context.cpp  context.h  core.cpp  core.h  env.cpp  env.h  flag.cpp  flag.h  service_discovery.cpp  service_discovery.h  service_registry.cpp  service_registry.h
src/core/assist/: format.cpp  format.h
src/core/host/: cpu.cpp  cpu.h  disk.cpp  disk.h  mem.cpp  mem.h  net.cpp  net.h
src/core/log/: file.cpp
src/core/option/: command.cpp  command.h  value.cpp
src/viper/: CMakeLists.txt  app.cpp  app.h  cmds.cpp  cmds.h  configuration.h  main.cpp
src/viper/local/: local.cpp  local.h
